# cms-processing-pdas

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
scripts/: install_quick_action.sh
src/pro_data_analysis/: __init__.py  adobe.py  cli.py  images.py  models.py  pdf_extract.py  pipeline.py  ppt.py
src/pro_data_analysis_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_metadata.py
tools/: build_pptx.mjs
